--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,15 +1,21 @@
 </head>
 <% if(user && reqd) { %>
-<body class="navOn img1">
-  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="navbar-header">
-      <a class="navbar-brand" href="/">FTL</a>
-      
-      <ul class="nav navbar-nav">
-      <li><a href="/leaderboard">Leaderboard</a></li>
-      <li><a href="/dash">Dashboard</a></li>
-      </ul>
-  </div>
-    <a class="navbar-brand pull-right" href="#"><%= user.username %></a>
-  </div>
+<body>
+  <div id="bgDiv">
+    <img src="../img/Oldtraffordpanorama.jpg" class="bgImg" />
+    <img src="../img/AllianzArenaWide.jpg" class="bgImg" />
+    <img src="../img/emirates-by-night.jpg" class="bgImg" />
+    <img src="../img/stamfordBridgeAerial.jpg" class="bgImg" />
+
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar-header">
+        <a class="navbar-brand" href="/">FTL</a>
+        
+        <ul class="nav navbar-nav">
+        <li><a href="/leaderboard">Leaderboard</a></li>
+        <li><a href="/dash">Dashboard</a></li>
+        </ul>
+    </div>
+      <a class="navbar-brand pull-right" href="#"><%= user.username %></a>
+    </div>
 <% } %>
